# trade-secrets

./: Cargo.toml  LICENSE  README.md
examples/: secret-a.yaml  secret-b.yaml  trade-a-for-b.yaml
src/: controller.rs  crd.rs  duration.rs  main.rs
