[package]
name = "trade-secrets"
version = "0.1.0"
authors = ["Bobby R. Ward <bobbyrward@gmail.com>"]
edition = "2018"

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
kube-derive = "0.38.0"

serde_json = "1.0"
serde_yaml = "0.8"

anyhow = "1.0"
thiserror = "1.0"

futures = "0.3"
regex = "1.3"
lazy_static = "1.4"

[dependencies.structopt]
version = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

# kube cannot use rustls. see briansmith/webpki#54 and clux/kube-rs#153
[dependencies.kube]
version = "0.38"
# default-features = false
# features = ["rustls-tls"]

[dependencies.kube-runtime]
version = "0.38"
# default-features = false
# features = ["rustls-tls"]

[dependencies.k8s-openapi]
version = "0.9"
default-features = false
features = ["v1_18"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

